fix(boolean-widget): Remove form look styles and align layout

--- a/src/stylesheets/modules/forms/form_controls.styl
+++ b/src/stylesheets/modules/forms/form_controls.styl
@@ -55,7 +55,6 @@ $form-control()
   &[aria-invalid="true"]
     border-color: darken($red, 10%)
 
-.form-control-look,
 .form-control
   $form-control()
 
