--- a/src/stylesheets/modules/forms/form_widgets.styl
+++ b/src/stylesheets/modules/forms/form_widgets.styl
@@ -116,8 +116,11 @@ cf-radio-editor
   display: block
 .cf-radio-editor__option
   line-height: 40px
+  margin-right: 1em
 .cf-radio-editor__radio
-  vertical-align: initial
+  margin-top: 1px
+  vertical-align: middle
+  margin-right: 1ex
 
 cf-rating-editor
   display: block
